# wedding-coasters

./: flake.nix  wedding-coasters.cabal
app/: Main.hs
app/make-coasters/: Main.hs
app/make-jig/: Main.hs
app/make-table-signs/: Main.hs
designs/apollonian-gasket/: Main.hs
designs/dragon/: Main.hs
designs/hilbert/: Main.hs
designs/pythagorean-tree/: Main.hs
designs/random-walk/: Main.hs
designs/snowflake/: Main.hs
designs/sunflower/: Main.hs
designs/ulam-spiral/: Main.hs
examples/apollonian-gasket/: Main.hs
examples/dragon/: Main.hs
examples/gaussian-primes/: Main.hs
examples/hilbert/: Main.hs
examples/pythagorean-tree/: Main.hs
examples/random-walk/: Main.hs
examples/snowflake/: Main.hs
examples/sunflower/: Main.hs
examples/ulam-spiral/: Main.hs
src/: Coaster.hs  Designs.hs  Lib.hs
src/Designs/: Dragon.hs  GaussianPrimes.hs  Hilbert.hs  PythagoreanTree.hs  RandomWalk.hs  Snowflake.hs  Sunflower.hs  UlamSpiral.hs
