cabal-version: 2.2
name:          wedding-coasters
version:       0.0.0
build-type:    Simple

common common-diagram
  build-depends:
    , base          >=4 && <5
    , diagrams
    , diagrams-lib
    , diagrams-svg

  default-extensions:
    NoMonomorphismRestriction
    FlexibleContexts
    TypeFamilies

  default-language:   Haskell2010

executable hilbert
  import:         common-diagram
  hs-source-dirs: designs/hilbert
  main-is:        Main.hs

executable apollonian-gasket
  import:         common-diagram
  build-depends:  diagrams-contrib
  hs-source-dirs: designs/apollonian-gasket
  main-is:        Main.hs
