cabal-version: 2.2
name:          wedding-coasters
version:       0.0.0
build-type:    Simple

common common
  build-depends:
    , base          >=4 && <5
    , diagrams
    , diagrams-lib
    , diagrams-svg

  default-extensions:
    NoMonomorphismRestriction
    FlexibleContexts
    TypeFamilies

  default-language:   Haskell2010

common common-design
  build-depends: wedding-coasters

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Lib

executable hilbert
  import:         common, common-design
  hs-source-dirs: designs/hilbert
  main-is:        Main.hs

executable apollonian-gasket
  import:         common, common-design
  build-depends:  diagrams-contrib
  hs-source-dirs: designs/apollonian-gasket
  main-is:        Main.hs

executable pythagorean-tree
  import:         common, common-design
  hs-source-dirs: designs/pythagorean-tree
  main-is:        Main.hs

executable dragon
  import:         common, common-design
  hs-source-dirs: designs/dragon
  main-is:        Main.hs

executable snowflake
  import:         common, common-design
  hs-source-dirs: designs/snowflake
  main-is:        Main.hs

executable random-walk
  import:         common, common-design
  hs-source-dirs: designs/random-walk
  main-is:        Main.hs
  build-depends:
    , containers
    , random
    , random-shuffle
    , recursion-schemes

executable ulam-spiral
  import:         common, common-design
  hs-source-dirs: designs/ulam-spiral
  main-is:        Main.hs
