cabal-version: 2.2
name:          wedding-coasters
version:       0.0.0
build-type:    Simple

common common
  build-depends:
    , base              >=4 && <5
    , diagrams
    , diagrams-contrib
    , diagrams-lib
    , diagrams-svg

  default-extensions:
    NoMonomorphismRestriction
    FlexibleContexts
    TypeFamilies

  default-language:   Haskell2010

common common-design
  build-depends: wedding-coasters

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Coaster
    Designs
    Designs.Dragon
    Designs.GaussianPrimes
    Designs.Hilbert
    Designs.PythagoreanTree
    Designs.RandomWalk
    Designs.Snowflake
    Designs.Sunflower
    Designs.UlamSpiral

  build-depends:
    , containers
    , random
    , random-shuffle
    , recursion-schemes
    , split

executable make-coasters
  import:         common, common-design
  hs-source-dirs: app/make-coasters
  main-is:        Main.hs

executable make-jig
  import:         common, common-design
  hs-source-dirs: app/make-jig
  main-is:        Main.hs

executable hilbert
  import:         common, common-design
  hs-source-dirs: examples/hilbert
  main-is:        Main.hs

executable apollonian-gasket
  import:         common, common-design
  hs-source-dirs: examples/apollonian-gasket
  main-is:        Main.hs

executable pythagorean-tree
  import:         common, common-design
  hs-source-dirs: examples/pythagorean-tree
  main-is:        Main.hs

executable dragon
  import:         common, common-design
  hs-source-dirs: examples/dragon
  main-is:        Main.hs

executable snowflake
  import:         common, common-design
  hs-source-dirs: examples/snowflake
  main-is:        Main.hs

executable random-walk
  import:         common, common-design
  hs-source-dirs: examples/random-walk
  main-is:        Main.hs

executable ulam-spiral
  import:         common, common-design
  hs-source-dirs: examples/ulam-spiral
  main-is:        Main.hs

executable sunflower
  import:         common, common-design
  hs-source-dirs: examples/sunflower
  main-is:        Main.hs

executable gaussian-primes
  import:         common, common-design
  hs-source-dirs: examples/gaussian-primes
  main-is:        Main.hs